Remove span to prevent input boxes of required metadata going off the page and align button

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,7 +19,7 @@ label {
 }
 
 .load-id-button {
-  max-width: 40.67rem;
+  max-width: 34.67rem;
   display: flex;
   justify-content: flex-end;
 }
